[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Blackjack.gd" type="Script" id=1]

[node name="Blackjack" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1023.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 1023.0
margin_bottom = 602.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 1023.0
margin_bottom = 299.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_right = 509.0
margin_bottom = 299.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 509.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 509.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Hand value:"
align = 1
valign = 1

[node name="player_hand" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 509.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
margin_left = 513.0
margin_right = 1023.0
margin_bottom = 299.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 510.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 151.0
margin_right = 510.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 303.0
margin_right = 1023.0
margin_bottom = 602.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
margin_right = 509.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hit" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 509.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Hit"

[node name="Stand" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 151.0
margin_right = 509.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stand"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer2"]
margin_left = 513.0
margin_right = 1023.0
margin_bottom = 299.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_left = 242.0
margin_right = 268.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Bet:"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 18.0
margin_right = 510.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="Control/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 151.0
margin_right = 510.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start!"

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer/Stand" to="." method="_on_Stand_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer2/VBoxContainer2/Start" to="." method="_on_Start_pressed"]
